prevent zoom on mobile forms

--- a/css/styles.css
+++ b/css/styles.css
@@ -335,6 +335,7 @@ h4 {
   max-width: 400px;
   margin: 20px auto;
   text-align: center;
+  font-size: 16px;
 }
 
 #contact input,
